--- a/landing/templates/coaching.html
+++ b/landing/templates/coaching.html
@@ -11,34 +11,82 @@
         <p class="text-tertiary mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="400" style="animation-delay: 400ms;">Feel free to ask for details, don't save any questions!</p>
     </div>
 </div>
+<div class="container-fluid" style='background:url("{% static 'img/about/banner.png' %}"); background-size:cover; height:100vh;'>
+    
+    <div class="container py-5 mb-5" style="height:500px;">
+        <div class="row justify-content-center mb-4">
+            <div class="col-lg-6">
 
-            
-<div class="container-fluid">
-    <div class="row featured-boxes-full featured-boxes-full-scale clearfix">
-        <div class="col-lg-4 featured-box-full featured-box-full-tertiary" style="height: 302px;">
-            <i class="icon-directions icons"></i>
-            <h4 class="mt-3">1 - BRIEF</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet. Quisque rutrum pellentesque imperdiet.</p>
-        </div>
-        <div class="col-lg-4 featured-box-full featured-box-full-tertiary" style="height: 302px;">
-            <i class="icon-puzzle icons"></i>
-            <h4 class="mt-3">2 - CREATION</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet. Quisque rutrum pellentesque imperdiet.</p>
-        </div>
-        <div class="col-lg-4 featured-box-full featured-box-full-tertiary" style="height: 302px;">
-            <i class="icon-rocket icons"></i>
-            <h4 class="mt-3">3 - LAUNCH</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit.</p>
+                <div class="tabs tabs-bottom tabs-center tabs-simple custom-tabs-style-1 mt-2 mb-3">
+                    <ul class="nav nav-tabs mb-3">
+                        <li class="nav-item active">
+                            <a class="nav-link active" href="#tabsNavigationSimpleIcons1" data-toggle="tab">
+                                <span class="featured-boxes featured-boxes-style-6 p-0 m-0">
+                                    <span class="featured-box featured-box-primary featured-box-effect-6 p-0 m-0" style="height: 100px;">
+                                        <span class="box-content p-0 m-0">
+                                            <i class="icon-featured icon-bulb icons"></i>
+                                        </span>
+                                    </span>
+                                </span>									
+                                <p class="text-color-hover-tertiary  font-weight-bold mb-0 pt-2 text-2 pb-0">1. Strategy</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#tabsNavigationSimpleIcons2" data-toggle="tab">
+                                <span class="featured-boxes featured-boxes-style-6 p-0 m-0">
+                                    <span class="featured-box featured-box-primary featured-box-effect-6 p-0 m-0" style="height: 100px;">
+                                        <span class="box-content p-0 m-0">
+                                            <i class="icon-featured icon-mustache icons"></i>
+                                        </span>
+                                    </span>
+                                </span>									
+                                <p class="text-color-hover-tertiary font-weight-bold mb-0 pt-2 text-2 pb-0">2. Creative</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#tabsNavigationSimpleIcons3" data-toggle="tab">
+                                <span class="featured-boxes featured-boxes-style-6 p-0 m-0">
+                                    <span class="featured-box featured-box-primary featured-box-effect-6 p-0 m-0" style="height: 100px;">
+                                        <span class="box-content p-0 m-0">
+                                            <i class="icon-featured icon-puzzle icons"></i>
+                                        </span>
+                                    </span>
+                                </span>									
+                                <p class="text-color-hover-tertiary font-weight-bold mb-0 pt-2 text-2 pb-0">3. Development</p>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="tab-content">
+                        <div class="tab-pane active" id="tabsNavigationSimpleIcons1">
+                            <div class="text-center">
+                                <p class="text-tertiary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+                            </div>
+                        </div>
+                        <div class="tab-pane" id="tabsNavigationSimpleIcons2">
+                            <div class="text-center">
+                                <p class="text-tertiary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+                            </div>
+                        </div>
+                        <div class="tab-pane" id="tabsNavigationSimpleIcons3">
+                            <div class="text-center">
+                                <p class="text-tertiary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus.Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
         </div>
     </div>
-</div>
-<hr>
-<div class="row">
-    <div class="col text-center">
-        <a class="btn btn-outline btn-primary text-1 font-weight-semibold text-uppercase px-5 btn-py-2 mb-3" href="/contact/">Book your Free Initial Consultation</a>
+<br>
+    <div class="mt-4 pt-4 row">
+        <div class="col text-center">
+            <a class="btn btn-outline btn-primary text-1 font-weight-semibold text-uppercase px-5 btn-py-2 mb-3" href="/contact/">Book your Free Initial Consultation</a>
+        </div>
     </div>
+    <br>
 </div>
-<hr>
+
 
 <section class="section bg-tertiary section-height-3 border-0 m-0">
     <div class="container pb-2">
