--- a/landing/templates/coaching.html
+++ b/landing/templates/coaching.html
@@ -12,10 +12,10 @@
     </div>
 </div>
 <div class="container-fluid" style='background:url("{% static 'img/about/banner.png' %}"); background-size:cover; height:100vh;'>
-    
+    <br><br><br>
     <div class="container py-5 mb-5" style="height:500px;">
-        <div class="row justify-content-center mb-4">
-            <div class="col-lg-6">
+        <div class="row col-xl-9 justify-content-center mb-4">
+            <div>
 
                 <div class="tabs tabs-bottom tabs-center tabs-simple custom-tabs-style-1 mt-2 mb-3">
                     <ul class="nav nav-tabs mb-3">
@@ -80,7 +80,7 @@
     </div>
 <br>
     <div class="mt-4 pt-4 row">
-        <div class="col text-center">
+        <div class="col col-xl-9 text-center">
             <a class="btn btn-outline btn-primary text-1 font-weight-semibold text-uppercase px-5 btn-py-2 mb-3" href="/contact/">Book your Free Initial Consultation</a>
         </div>
     </div>
