--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -247,27 +247,52 @@
                 <div class="owl-carousel owl-theme nav-bottom rounded-nav mb-0" data-plugin-options="{'items': 1, 'loop': false, 'nav': true, 'autoHeight': true}">
                     <div>
                         <div class="testimonial testimonial-style-2 testimonial-with-quotes testimonial-quotes-dark mb-0">
-                            <div class="testimonial-author">
-                                <img src="{% static "img/clients/client-1.jpg"%}" class="img-fluid rounded-circle" alt="">
-                            </div>
                             <blockquote>
-                                <p class="text-color-dark text-5 line-height-5 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget risus porta, tincidunt turpis at, interdum tortor. Suspendisse potenti. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce ante tellus, convallis non consectetur sed, pharetra nec ex.</p>
+                                <p class="text-color-dark text-5 line-height-5 mb-0">My coaching experience with Jessica was very positive and it was sad when it came to an end. She managed to get me to think differently about some of the approaches and techniques I was using, especially joining an organisation as a new executive director! The great thing about the sessions was the ease and depth of conversations. I was able to share my innermost thoughts without feeling judged. Jessica is a active listener and a joy to be around</p>
                             </blockquote>
+                            <p data-dismiss="modal"><a class="color-primary"  data-toggle="modal" data-target="#defaultModal">Read More</a></p>
                             <div class="testimonial-author">
-                                <p><strong class="font-weight-extra-bold text-2">- John Smith. Okler</strong></p>
+                                <p><strong class="font-weight-extra-bold text-2">- Jeff</strong></p>
                             </div>
                         </div>
                     </div>
                     <div>
                         <div class="testimonial testimonial-style-2 testimonial-with-quotes testimonial-quotes-dark mb-0">
-                            <div class="testimonial-author">
-                                <img src="{% static "img/clients/client-1.jpg"%}" class="img-fluid rounded-circle" alt="">
-                            </div>
                             <blockquote>
-                                <p class="text-color-dark text-5 line-height-5 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget risus porta, tincidunt turpis at, interdum tortor. Suspendisse potenti. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <p class="text-color-dark text-5 line-height-5 mb-0">I really enjoyed and benefitted from my coaching sessions with Jessica. Her relaxed coaching style enabled me to think more carefully about my career aspirations and what I need to do to achieve them. Jessica encouraged me to believe in not only myself but also my abilities and helped me to realise the importance of self-confidence. I have since gone on to step out of my comfort zone and embrace new career opportunities. I am truly thankful for all of Jessica’s support!</p>
                             </blockquote>
+                            <p data-dismiss="modal"><a class="color-primary"  data-toggle="modal" data-target="#defaultModal">Read More</a></p>
                             <div class="testimonial-author">
-                                <p><strong class="font-weight-extra-bold text-2">- John Smith. Okler</strong></p>
+                                <p><strong class="font-weight-extra-bold text-2">- Deneice</strong></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="testimonial testimonial-style-2 testimonial-with-quotes testimonial-quotes-dark mb-0">
+                            <blockquote>
+                                <p class="text-color-dark text-5 line-height-5 mb-0">Being coached by Jessica was such a blessing and life changing experience. When I began the sessions I was looking at a career change and exploring self-development in the way I communicate and complete tasks. The sessions helped me express how I felt about certain things, create action plans in order to get tasks rather than just have multiple thoughts and change my outlook in many areas of my life. I am pleased to say in the sessions I had not only did I feel more positive and confident in my abilities, I was also able to complete my goals, one of which was securing a new role! I would highly recommend these sessions to anyone looking for betterment in any area.
+
+                                Thank you so much for your help Jessica!
+                                </p>
+                            </blockquote>
+                            <p data-dismiss="modal"><a class="color-primary"  data-toggle="modal" data-target="#defaultModal">Read More</a></p>
+                            <div class="testimonial-author">
+                                <p><strong class="font-weight-extra-bold text-2">- Andy</strong></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="testimonial testimonial-style-2 testimonial-with-quotes testimonial-quotes-dark mb-0">
+                            <blockquote>
+                                <p class="text-color-dark text-5 line-height-5 mb-0">Jessica helped me be a better version of myself! She gave me the tools and the head space to reflect on internal areas for improvement and I can see growth in my work and personal life. 
+                                Jessica was patient, she listened attentively and asked the right questions to highlight areas that needed attention. She created a safe space where I could be myself. She didn’t tell me what to do, instead she allowed me to delve deeper to uncover the root causes and then we explored what the solutions could be. 
+                                Working with Jessica was a true journey. My self-confidence grew, as an individual, but also as a professional in my field. I learnt practical ways to manage my time and tasks better and gained a better understanding of things I can and cannot control, which is something that will stay with me for life.
+                                She helped me identify my current state and where I want to be in the future and then together we mapped out clear and achievable steps on how I could get there. Jessica is a great coach, who I would definitely work with again in the future to help with any work and personal challenges. Thank you Jess!
+                                </p>
+                            </blockquote>
+                            <p data-dismiss="modal"><a class="color-primary"  data-toggle="modal" data-target="#defaultModal">Read More</a></p>
+                            <div class="testimonial-author">
+                                <p><strong class="font-weight-extra-bold text-2">- Sabrina</strong></p>
                             </div>
                         </div>
                     </div>
@@ -276,94 +301,24 @@
             </div>
         </div>
     </div>
+
 </section>
-
-{% comment %} <div class="container-fluid">
-    <div class="row">
-        <div class="col-lg-6 p-0">
-            <section class="section section-height-3 section-primary h-100 m-0 border-0">
-                <div class="row justify-content-end m-0">
-                    <div class="col-half-section col-half-section-right mb-5 appear-animation" data-appear-animation="fadeInRightShorter">
-                        <h2 class="text-light text-7">Latest <strong>Posts</strong></h2>
-                        <div class="row recent-posts">
-                            <div class="col-md-6 mb-4 mb-md-0">
-                                <article>
-                                    <div class="row">
-                                        <div class="col-auto pr-0">
-                                            <div class="date">
-                                                <span class="day bg-color-light text-color-dark font-weight-extra-bold">15</span>
-                                                <span class="month bg-color-light font-weight-semibold text-color-primary text-1">JAN</span>
-                                            </div>
-                                        </div>
-                                        <div class="col pl-1">
-                                            <h4 class="font-weight-normal line-height-3 text-4"><a href="blog-post.html" class="text-light">Lorem ipsum dolor sit amet, consectetur</a></h4>
-                                            <p class="text-color-light line-height-5 opacity-6 pr-4 mb-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                            <a href="/" class="read-more text-color-light font-weight-semibold text-2">read more <i class="fas fa-chevron-right text-1 ml-1"></i></a>
-                                        </div>
-                                    </div>
-                                </article>
-                            </div>
-                            <div class="col-md-6">
-                                <article>
-                                    <div class="row">
-                                        <div class="col-auto pr-0">
-                                            <div class="date">
-                                                <span class="day bg-color-light text-color-dark font-weight-extra-bold">14</span>
-                                                <span class="month bg-color-light font-weight-semibold text-color-primary text-1">JAN</span>
-                                            </div>
-                                        </div>
-                                        <div class="col pl-1">
-                                            <h4 class="font-weight-normal line-height-3 text-4"><a href="blog-post.html" class="text-light">Lorem ipsum dolor sit amet, consectetur</a></h4>
-                                            <p class="text-color-light line-height-5 opacity-6 pr-4 mb-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                            <a href="/" class="read-more text-color-light font-weight-semibold text-2">read more <i class="fas fa-chevron-right text-1 ml-1"></i></a>
-                                        </div>
-                                    </div>
-                                </article>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
+<div class="modal fade show" id="defaultModal" tabindex="-1" role="dialog" aria-labelledby="defaultModalLabel" style="display: hidden;" aria-modal="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="defaultModalLabel">Default Modal Title</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            </div>
+            <div class="modal-body">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-light" data-dismiss="modal">Close</button>
+            </div>
         </div>
-
-        <div class="col-lg-6 p-0">
-            <section class="section section-height-3 section-secondary h-100 m-0 border-0">
-                <div class="row m-0 mt-lg-5 pt-lg-2">
-                    <div class="col-half-section mb-5 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="400">
-                        <div class="row counters counters-sm counters-text-light">
-                            <div class="col-md-6 mb-5">
-                                <div class="counter">
-                                    <strong class="font-weight-extra-bold" data-to="30000" data-append="+">0</strong>
-                                    <label class="opacity-5 text-4 mt-1">Happy Clients</label>
-                                </div>
-                            </div>
-                            <div class="col-md-6 mb-5">
-                                <div class="counter">
-                                    <strong class="font-weight-extra-bold" data-to="3500" data-append="+">0</strong>
-                                    <label class="opacity-5 text-4 mt-1">Answered Tickets</label>
-                                </div>
-                            </div>
-                            <div class="col-md-6 mb-5 mb-md-0">
-                                <div class="counter">
-                                    <strong class="font-weight-extra-bold" data-to="16">0</strong>
-                                    <label class="opacity-5 text-4 mt-1">Pre-made Demos</label>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="counter">
-                                    <strong class="font-weight-extra-bold" data-to="3000" data-append="+">0</strong>
-                                    <label class="opacity-5 text-4 mt-1">Development Hours</label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </div>
-
     </div>
-</div> {% endcomment %}
-
+</div>
 
 
 
