--- a/landing/templates/base.html
+++ b/landing/templates/base.html
@@ -7,11 +7,11 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">	
 
-		<title>{% block title %}{% endblock %} | JFM Consulting</title>
+		<title>{% block title %}{% endblock %} | JFM Consult</title>
     
-		<meta name="keywords" content="HTML5 Template" />
-		<meta name="description" content="Porto - Responsive HTML5 Template">
-		<meta name="author" content="okler.net">
+		<meta name="keywords" content="JFM Consult" />
+		<meta name="description" content="Coaching Consultancy">
+		<meta name="author" content="jfm-consult.co.uk">
 
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="{% static "img/favicon.ico" %}" type="image/x-icon" />
