--- a/landing/templates/about.html
+++ b/landing/templates/about.html
@@ -21,8 +21,25 @@
             <div class="overflow-hidden mb-3">
                 <p class="font-weight-bold text-tertiary text-uppercase mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="500" style="animation-delay: 500ms;">Life and Career Coach</p>
             </div>
-            <p class="lead appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="700" style="animation-delay: 700ms;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam <a href="#">vehicula</a> sit amet enim ac sagittis. Curabitur eget leo varius, elementum mauris eget, egestas quam. Donec ante risus, dapibus sed lectus non, lacinia vestibulum nisi. Morbi vitae augue quam. Nullam ac laoreet libero.</p>
+            <p class="lead appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="700" style="animation-delay: 700ms;">I believe that our passion is a core driving force that ignites us to fulfil our purpose and sometimes we might just need help resetting our compasses to get back on ‘our’ path. I think the key thing is about re-connecting with the essence of who we truly are.</p>
             <p class="pb-3 text-tertiary appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800" style="animation-delay: 800ms;">Consectetur adipiscing elit. Aliquam iaculis sit amet enim ac sagittis. Curabitur eget leo varius, elementum mauris eget, egestas quam.</p>
+            <hr class="solid my-4 appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="900" style="animation-delay: 900ms;">
+            <p class="lead appear-animation animated fadeInUpShorter appear-animation-visible">
+                As well as coaching, other services offered include the following:
+                <ul class="text-tertiary">
+                    <li>Strengthscope Practitioner</li>
+                    <li>Design OD Interventions and Team away days</li>
+                    <li>Leadership development programme design</li>
+                    <li>Learning and development programme design</li>
+                    <li>Powerpoint presentation design - Turn your content into great presentations</li>
+                    <li>
+                        Organisation Development Consultancy
+                    </li>
+                </ul>
+                So why not get in touch today to discuss your needs.
+                
+            </p>
+
             <hr class="solid my-4 appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="900" style="animation-delay: 900ms;">
             <div class="row align-items-center appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1000" style="animation-delay: 1000ms;">
                 <div class="col-lg-6">
@@ -38,7 +55,7 @@
             </div> 
         </div>
 
-        <div class="col-md-5 rounded-lg order-md-2 overflow-hidden mb-4 mb-lg-0 appear-animation animated fadeInRightShorter appear-animation-visible" data-appear-animation="fadeInRightShorter" style="animation-delay: 100ms; width: 445px; height: 445px;">
+        <div class="col-md-5 rounded-lg order-md-2 mb-4 mb-lg-0 appear-animation animated fadeInRightShorter appear-animation-visible" data-appear-animation="fadeInRightShorter" style="animation-delay: 100ms; width: 445px; height: 445px;">
         <!-- <div class="col-md-5 rounded-lg order-md-2 overflow-hidden mb-4 mb-lg-0 appear-animation animated fadeInRightShorter appear-animation-visible" data-appear-animation="fadeInRightShorter" style="animation-delay: 100ms; width: 445px; height: 445px; background-size: cover; background-image: url('{% static 'img/team/team-7p.jpg' %} ');"> -->
             <img src="{% static "img/team/team-7p.jpg"%}" class="img-fluid mb-2 rounded-lg" alt="">
         </div>
