--- a/landing/templates/coaching.html
+++ b/landing/templates/coaching.html
@@ -87,104 +87,5 @@
     <br>
 </div>
 
-
-<section class="section bg-tertiary section-height-3 border-0 m-0">
-    <div class="container pb-2">
-        <div class="row">
-            <div class="col-lg-6 text-center text-md-left mb-5 mb-lg-0">
-                <h2 class="text-primary font-weight-normal text-6 mb-2">About <strong class="font-weight-extra-bold">Our Clients</strong></h2>
-                <p class="lead text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit massa enim. Nullam id varius nunc.</p>
-                <div class="row justify-content-center my-5">
-                    <div class="col-8 text-center col-md-4">
-                        <img src="{% static "img/logos/logo-1.png" %}" class="img-fluid hover-effect-3" alt="">
-                    </div>
-                    <div class="col-8 text-center col-md-4 my-3 my-md-0">
-                        <img src="{% static "img/logos/logo-2.png" %}" class="img-fluid hover-effect-3" alt="">
-                    </div>
-                    <div class="col-8 text-center col-md-4">
-                        <img src="{% static "img/logos/logo-3.png" %}" class="img-fluid hover-effect-3" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="owl-carousel owl-theme nav-style-1 stage-margin owl-loaded owl-drag owl-carousel-init" data-plugin-options="{'responsive': {'576': {'items': 1}, '768': {'items': 1}, '992': {'items': 1}, '1200': {'items': 1}}, 'loop': true, 'nav': true, 'dots': false, 'stagePadding': 40, 'autoplay': true, 'autoplayTimeout': 6000, 'loop': true}" style="height: auto;">
-
-                <div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-920px, 0px, 0px); transition: all 0.25s ease 0s; width: 2840px; padding-left: 40px; padding-right: 40px;"><div class="owl-item cloned" style="width: 460px;"><div>
-                        <div class="testimonial testimonial-style-2 testimonial-with-quotes testimonial-quotes-dark testimonial-remove-right-quote pl-md-4 mb-0">
-                            <div class="testimonial-author">
-                                <img src="{% static "img/clients/client-1.jpg"%}" class="img-fluid rounded-circle mb-0" alt="">
-                            </div>
-                            <blockquote>
-                                <p class="text-color-dark text-4 line-height-5 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae metus tellus. Curabitur non lorem at odio tempus consectetur vel eu lacus. Morbi.</p>
-                            </blockquote>
-                            <div class="testimonial-author">
-                                <p><strong class="font-weight-extra-bold text-2">John Smith</strong><span>Okler</span></p>
-                            </div>
-                        </div>
-                    </div></div><div class="owl-item cloned" style="width: 460px;"><div>
-                        <div class="testimonial testimonial-style-2 testimonial-with-quotes testimonial-quotes-dark testimonial-remove-right-quote pl-md-4 mb-0">
-                            <div class="testimonial-author">
-                                <img src="{% static "img/clients/client-1.jpg"%}" class="img-fluid rounded-circle mb-0" alt="">
-                            </div>
-                            <blockquote>
-                                <p class="text-color-dark text-4 line-height-5 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae metus tellus. Curabitur non lorem at odio tempus consectetur vel eu lacus. Morbi.</p>
-                            </blockquote>
-                            <div class="testimonial-author">
-                                <p><strong class="font-weight-extra-bold text-2">John Smith</strong><span>Okler</span></p>
-                            </div>
-                        </div>
-                    </div></div><div class="owl-item active" style="width: 460px;"><div>
-                        <div class="testimonial testimonial-style-2 testimonial-with-quotes testimonial-quotes-dark testimonial-remove-right-quote pl-md-4 mb-0">
-                            <div class="testimonial-author">
-                                <img src="{% static "img/clients/client-1.jpg"%}" class="img-fluid rounded-circle mb-0" alt="">
-                            </div>
-                            <blockquote>
-                                <p class="text-color-dark text-4 line-height-5 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae metus tellus. Curabitur non lorem at odio tempus consectetur vel eu lacus. Morbi.</p>
-                            </blockquote>
-                            <div class="testimonial-author">
-                                <p><strong class="font-weight-extra-bold text-2">John Smith</strong><span>Okler</span></p>
-                            </div>
-                        </div>
-                    </div></div><div class="owl-item" style="width: 460px;"><div>
-                        <div class="testimonial testimonial-style-2 testimonial-with-quotes testimonial-quotes-dark testimonial-remove-right-quote pl-md-4 mb-0">
-                            <div class="testimonial-author">
-                                <img src="{% static "img/clients/client-1.jpg"%}" class="img-fluid rounded-circle mb-0" alt="">
-                            </div>
-                            <blockquote>
-                                <p class="text-color-dark text-4 line-height-5 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae metus tellus. Curabitur non lorem at odio tempus consectetur vel eu lacus. Morbi.</p>
-                            </blockquote>
-                            <div class="testimonial-author">
-                                <p><strong class="font-weight-extra-bold text-2">John Smith</strong><span>Okler</span></p>
-                            </div>
-                        </div>
-                    </div></div><div class="owl-item cloned" style="width: 460px;"><div>
-                        <div class="testimonial testimonial-style-2 testimonial-with-quotes testimonial-quotes-dark testimonial-remove-right-quote pl-md-4 mb-0">
-                            <div class="testimonial-author">
-                                <img src="{% static "img/clients/client-1.jpg"%}" class="img-fluid rounded-circle mb-0" alt="">
-                            </div>
-                            <blockquote>
-                                <p class="text-color-dark text-4 line-height-5 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae metus tellus. Curabitur non lorem at odio tempus consectetur vel eu lacus. Morbi.</p>
-                            </blockquote>
-                            <div class="testimonial-author">
-                                <p><strong class="font-weight-extra-bold text-2">John Smith</strong><span>Okler</span></p>
-                            </div>
-                        </div>
-                    </div></div><div class="owl-item cloned" style="width: 460px;"><div>
-                        <div class="testimonial testimonial-style-2 testimonial-with-quotes testimonial-quotes-dark testimonial-remove-right-quote pl-md-4 mb-0">
-                            <div class="testimonial-author">
-                                <img src="{% static "img/clients/client-1.jpg"%}" class="img-fluid rounded-circle mb-0" alt="">
-                            </div>
-                            <blockquote>
-                                <p class="text-color-dark text-4 line-height-5 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae metus tellus. Curabitur non lorem at odio tempus consectetur vel eu lacus. Morbi.</p>
-                            </blockquote>
-                            <div class="testimonial-author">
-                                <p><strong class="font-weight-extra-bold text-2">John Smith</strong><span>Okler</span></p>
-                            </div>
-                        </div>
-                    </div></div></div></div><div class="owl-nav disabled"><button type="button" role="presentation" class="owl-prev"></button><button type="button" role="presentation" class="owl-next"></button></div><div class="owl-dots disabled"></div></div>
-            </div>
-        </div>
-    </div>
-</section>
-
+{% include 'components/testimonials.html' %}
 {% endblock %}
