--- a/landing/templates/components/slider.html
+++ b/landing/templates/components/slider.html
@@ -1,15 +1,15 @@
 {% load static %}
 <div class="slider-container rev_slider_wrapper" style="height: 800px;">
-    <div id="revolutionSlider" class="slider rev_slider" data-version="5.4.8" data-plugin-revolution-slider data-plugin-options="{'delay': 9000, 'gridwidth': 1170, 'gridheight': 800, 'responsiveLevels': [4096,1200,992,500], 'navigation' : {'arrows': { 'enable': false }, 'bullets': {'enable': true, 'style': 'bullets-style-1', 'h_align': 'center', 'v_align': 'bottom', 'space': 7, 'v_offset': 70, 'h_offset': 0}}}">
+    <div id="revolutionSlider" class="slider rev_slider" data-version="5.4.8" data-plugin-revolution-slider data-plugin-options="{'gridwidth': 1170, 'gridheight': 800, 'responsiveLevels': [4096,1200,992,500], 'navigation' : {'arrows': { 'enable': false }, 'bullets': {'enable': true, 'style': 'bullets-style-1', 'h_align': 'center', 'v_align': 'bottom', 'space': 7, 'v_offset': 70, 'h_offset': 0}}}">
         <ul>
             <li data-transition="fade" class="slide-overlay slide-overlay-level-7">
-                <img src="{% static "img/slides/slide-corporate-4.jpg" %}"
+                <img src="{% static "img/slides/slide1.jpg" %}"
                     alt=""
                     data-bgposition="center center" 
                     data-bgfit="cover" 
                     data-bgrepeat="no-repeat" 
                     class="rev-slidebg">
-
+<!-- 
                 <div class="tp-caption"
                     data-x="center" data-hoffset="['-150','-150','-150','-240']"
                     data-y="center" data-voffset="['-110','-110','-110','-135']"
@@ -30,96 +30,54 @@
                     data-y="center" data-voffset="['-110','-110','-110','-135']"
                     data-start="1000"
                     data-transform_in="x:[300%];opacity:0;s:500;"
-                    data-transform_idle="opacity:0.2;s:500;"><img src="{% static "img/slides/slide-title-border.png" %}" alt=""></div>
+                    data-transform_idle="opacity:0.2;s:500;"><img src="{% static "img/slides/slide-title-border.png" %}" alt=""></div> -->
+
+
+                <!-- <div class="tp-caption tp-resizeme"
+                    data-x="center"
+                    data-y="center" 
+                    data-voffset="['-30','-30','-30','-105']"
+                    data-lineheight="['29','29','29','40']"
+                    data-width="['auto']"
+                    data-height="['auto']"
+                    data-start="1000"
+                    data-transform_in="opacity:0;s:500;"
+                    data-transform_idle="opacity:1;s:500;" style="z-index: 5;"><img class="slider-logo" src="{% static 'img/logo-transparent.png' %}" alt="">
+                </div> -->
+
 
                 <h1 class="tp-caption font-weight-extra-bold text-color-light negative-ls-2"
-                    data-frames='[{"delay":1000,"speed":2000,"frame":"0","from":"sX:1.5;opacity:0;fb:20px;","to":"o:1;fb:0;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;fb:0;","ease":"Power3.easeInOut"}]'
+                    data-frames='[{"delay":500,"speed":2000,"frame":"0","from":"sX:1.5;opacity:0;fb:20px;","to":"o:1;fb:0;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;fb:0;","ease":"Power3.easeInOut"}]'
                     data-x="center"
-                    data-y="center" data-voffset="['-60','-60','-60','-85']"
-                    data-fontsize="['50','50','50','90']"
-                    data-lineheight="['55','55','55','95']">JFM Consult</h1>
+                    data-y="center" 
+                    data-voffset="['-60','-60','-60','-105']"
+                    data-fontsize="['50','50','50','80']"
+                    data-lineheight="['55','55','55','95']">JFM Consult
+                </h1>
+
 
                 <div class="tp-caption font-weight-light text-center"
-                    data-frames='[{"from":"opacity:0;","speed":300,"to":"o:1;","delay":2000,"split":"chars","splitdelay":0.05,"ease":"Power2.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
+                    data-frames='[{"from":"opacity:0;","speed":300,"to":"o:1;","delay":1000,"split":"chars","splitdelay":0.05,"ease":"Power2.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
                     data-x="center"
                     data-y="center" data-voffset="['0','0','0','-25']"
-                    data-fontsize="['18','18','18','50']"
+                    data-fontsize="['18','18','18','30']"
                     data-lineheight="['29','29','29','40']"
                     style="color: #b5b5b5;">Uniting <strong class="text-color-light">Passion</strong> with <strong class="text-color-light">Purpose</strong></div>
-
-                <a class="tp-caption btn btn-light-2 btn-outline btn-rounded font-weight-semibold"
-                    data-frames='[{"delay":4500,"speed":2000,"frame":"0","from":"opacity:0;y:50%;","to":"o:1;y:0;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;fb:0;","ease":"Power3.easeInOut"}]'
-                    data-hash
-                    data-hash-offset="85"
-                    href="#main"
-                    data-x="center" data-hoffset="0"
-                    data-y="center" data-voffset="['100','100','100','75']"
-                    data-whitespace="nowrap"	
-                    data-fontsize="['15','15','15','33']"	
-                    data-paddingtop="['15','15','15','40']"
-                    data-paddingright="['45','45','45','110']"
-                    data-paddingbottom="['15','15','15','40']"				 
-                    data-paddingleft="['45','45','45','110']">GET STARTED NOW!</a>
-                
-            </li>
-            <li data-transition="fade" class="slide-overlay slide-overlay-level-7">
-                <img src="{% static "img/slides/slide-corporate-4.jpg" %}"  
-                    alt=""
-                    data-bgposition="center center" 
-                    data-bgfit="cover" 
-                    data-bgrepeat="no-repeat" 
-                    class="rev-slidebg">
-
-                <div class="tp-caption"
-                    data-x="center" data-hoffset="['-115','-115','-115','-185']"
-                    data-y="center" data-voffset="['-110','-110','-110','-135']"
-                    data-start="1000"
-                    data-transform_in="x:[-300%];opacity:0;s:500;"
-                    data-transform_idle="opacity:0.2;s:500;"><img src="{% static "img/slides/slide-title-border.png" %}" alt=""></div>
-
-                <div class="tp-caption text-color-light font-weight-normal"
-                    data-x="center"
-                    data-y="center" data-voffset="['-110','-110','-110','-135']"
-                    data-start="700"
-                    data-fontsize="['22','22','22','40']"
-                    data-lineheight="['25','25','25','45']"
-                    data-transform_in="y:[-50%];opacity:0;s:500;">WE ARE DESIGN</div>
-
-                <div class="tp-caption"
-                    data-x="center" data-hoffset="['115','115','115','185']"
-                    data-y="center" data-voffset="['-110','-110','-110','-135']"
-                    data-start="1000"
-                    data-transform_in="x:[300%];opacity:0;s:500;"
-                    data-transform_idle="opacity:0.2;s:500;"><img src="{% static "img/slides/slide-title-border.png" %}" alt=""></div>
-
-                <div class="tp-caption font-weight-extra-bold text-color-light negative-ls-2"
-                    data-frames='[{"delay":1000,"speed":2000,"frame":"0","from":"sX:1.5;opacity:0;fb:20px;","to":"o:1;fb:0;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;fb:0;","ease":"Power3.easeInOut"}]'
-                    data-x="center"
-                    data-y="center" data-voffset="['-60','-60','-60','-85']"
-                    data-fontsize="['50','50','50','90']"
-                    data-lineheight="['55','55','55','95']">SPECIALISTS</div>
-
-                <div class="tp-caption font-weight-light text-center"
-                    data-frames='[{"from":"opacity:0;","speed":300,"to":"o:1;","delay":2000,"split":"chars","splitdelay":0.05,"ease":"Power2.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
-                    data-x="center"
-                    data-y="center" data-voffset="['-10','-10','-10','-25']"
-                    data-fontsize="['18','18','18','50']"
-                    data-lineheight="['29','29','29','40']"
-                    style="color: #b5b5b5;">Designers thinking outside the box, learn more about us.</div>
 
                 <a class="tp-caption btn btn-light-2 btn-outline btn-rounded font-weight-semibold"
                     data-frames='[{"delay":2500,"speed":2000,"frame":"0","from":"opacity:0;y:50%;","to":"o:1;y:0;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;fb:0;","ease":"Power3.easeInOut"}]'
                     data-hash
                     data-hash-offset="85"
-                    href="/coaching/"
+                    href="#main"
                     data-x="center" data-hoffset="0"
-                    data-y="center" data-voffset="['70','70','70','45']"
+                    data-y="center" data-voffset="['100','100','100','95']"
                     data-whitespace="nowrap"	
                     data-fontsize="['15','15','15','33']"	
                     data-paddingtop="['15','15','15','40']"
                     data-paddingright="['45','45','45','110']"
                     data-paddingbottom="['15','15','15','40']"				 
-                    data-paddingleft="['45','45','45','110']">How Coaching Works</a>
+                    data-paddingleft="['45','45','45','110']">Take The First Step
+                </a>
             </li>
         </ul>
     </div>
