--- a/landing/templates/about.html
+++ b/landing/templates/about.html
@@ -55,7 +55,7 @@
             </div> 
         </div>
 
-        <div class="col-md-5 rounded-lg order-md-2 mb-4 mb-lg-0 appear-animation animated fadeInRightShorter appear-animation-visible" data-appear-animation="fadeInRightShorter" style="animation-delay: 100ms; width: 445px; height: 445px;">
+        <div class="col-md-5 rounded-lg order-md-2 mb-4 mb-lg-0 appear-animation animated fadeInRightShorter appear-animation-visible" data-appear-animation="fadeInRightShorter" style="animation-delay: 100ms; width: 445px;">
         <!-- <div class="col-md-5 rounded-lg order-md-2 overflow-hidden mb-4 mb-lg-0 appear-animation animated fadeInRightShorter appear-animation-visible" data-appear-animation="fadeInRightShorter" style="animation-delay: 100ms; width: 445px; height: 445px; background-size: cover; background-image: url('{% static 'img/team/team-7p.jpg' %} ');"> -->
             <img src="{% static "img/team/team-7p.jpg"%}" class="img-fluid mb-2 rounded-lg" alt="">
         </div>
