--- a/landing/templates/about.html
+++ b/landing/templates/about.html
@@ -22,10 +22,10 @@
                 <p class="font-weight-bold text-tertiary text-uppercase mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="500" style="animation-delay: 500ms;">Life and Career Coach</p>
             </div>
             <p class="lead appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="700" style="animation-delay: 700ms;">I believe that our passion is a core driving force that ignites us to fulfil our purpose and sometimes we might just need help resetting our compasses to get back on ‘our’ path. I think the key thing is about re-connecting with the essence of who we truly are.</p>
-            <p class="pb-3 text-tertiary appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800" style="animation-delay: 800ms;">Consectetur adipiscing elit. Aliquam iaculis sit amet enim ac sagittis. Curabitur eget leo varius, elementum mauris eget, egestas quam.</p>
+            <p class="pb-1 text-tertiary appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800" style="animation-delay: 800ms;">My approach is relatively simple. I will not profess to be a miracle worker, however I am committed to ensuring that anyone I work with moves from where they are now to where they want to be, understanding that we are all on a unique and different journey. <br> I believe we can begin to progress when we are clear on where it is where we are going, and hold on to how we expect to feel when we arrive there. <br> I have a transpersonal coaching style as the crux of what I aspire is to do is connecting people to their purpose and helping them discover meaning. </p>
             <hr class="solid my-4 appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="900" style="animation-delay: 900ms;">
             <p class="lead appear-animation animated fadeInUpShorter appear-animation-visible">
-                As well as coaching, other services offered include the following:
+                As well as coaching, other services offered include the following:</p>
                 <ul class="text-tertiary">
                     <li>Strengthscope Practitioner</li>
                     <li>Design OD Interventions and Team away days</li>
@@ -36,8 +36,8 @@
                         Organisation Development Consultancy
                     </li>
                 </ul>
+            <p class="lead appear-animation animated fadeInUpShorter appear-animation-visible">   
                 So why not get in touch today to discuss your needs.
-                
             </p>
 
             <hr class="solid my-4 appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="900" style="animation-delay: 900ms;">
