--- a/landing/templates/coaching.html
+++ b/landing/templates/coaching.html
@@ -11,9 +11,14 @@
         <p class="text-tertiary mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="400" style="animation-delay: 400ms;">Feel free to ask for details, don't save any questions!</p>
     </div>
 </div>
-<div class="container-fluid" style='background:url("{% static 'img/about/banner.png' %}"); background-size:cover; height:100vh;'>
-    <br><br><br>
-    <div class="container py-5 mb-5" style="height:500px;">
+<div class="container-fluid" style='background:url("{% static 'img/about/banner.png' %}"); background-size:cover; min-height:100vh; 
+background-position-x: left;'>
+    <br><br>
+    <p class="col-9 text-center m-auto appear-animation animated fadeInUpShorter appear-animation-visible">
+        We live and work in a <span class="text-primary">Volatile, Unpredictable, Complex and Ambiguous (VUCA)</span> environment and it’s important that we can overcome constant interference in order to succeed and ultimately be happy. When you strip everything away that kept us occupied and busy I think we realise what really matters and now more than ever, we need to feel connected to whatever our passions and purpose are.
+    </p>
+    <br>
+    <div class="container py-5">
         <div class="row col-xl-9 justify-content-center mb-4">
             <div>
 
@@ -74,11 +79,9 @@
                         </div>
                     </div>
                 </div>
-                
             </div>
         </div>
     </div>
-<br>
     <div class="mt-4 pt-4 row">
         <div class="col col-xl-9 text-center">
             <a class="btn btn-outline btn-primary text-1 font-weight-semibold text-uppercase px-5 btn-py-2 mb-3" href="/contact/">Book your Free Initial Consultation</a>
