--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -14,9 +14,9 @@
     <div class="container">
         <div class="row align-items-center justify-content-center justify-content-lg-between pb-5 pb-lg-0">
             <div class="col-lg-5 order-2 order-lg-1 pt-4 pt-lg-0 pb-5 pb-lg-0 mt-5 mt-lg-0 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="200">
-                <h2 class="font-weight-bold text-color-primary text-7 mb-2">Who We Are</h2>
-                <p class="lead text-secondary text-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit massa enim. Nullam id varius nunc.</p>
-                <p class="font-weight-light text-quaternary text-2 mb-4 opacity-9">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc. Vivamus bibendun magna ex, et faucibus lacus venenatis eget</p>
+                <h2 class="font-weight-bold text-color-primary text-7 mb-2">Who Am I?</h2>
+                <p class="lead text-secondary text-4">I am committed to ensuring that anyone I work with moves from where they are now to where they want to be, understanding that we are all on unique and on a different journey.</p>
+                <p class="font-weight-light text-quaternary text-2 mb-4 opacity-9">The crux of what I do is connecting people to their purpose and helping them discover meaning. </p>
                 <a href="/about/" class="btn btn-dark-scale-2 text-color-hover-secondary bg-color-hover-primary btn-px-5 btn-py-2 text-2">LEARN MORE</a>
             </div>
             <div class="col-9 offset-lg-1 col-lg-5 order-1 order-lg-2 scale-2">
@@ -64,7 +64,7 @@
         <div class="col-lg-4 px-5 pt-2 appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="800">
             <div class="testimonial testimonial-style-7 testimonial-primary py-5 mt-4 rounded-lg">
                 <blockquote>
-                    <p class="text-6 text-tertiary line-height-9 mb-0 mt-4">Your time is limited, so don’t waste it living someone else’s life.</p>
+                    <p class="text-6 text-tertiary line-height-9 mb-0 mt-4">We are all on a unique and different journey.</p>
                 </blockquote>
                 <a class="btn btn-outline btn-tertiary font-weight-bold mb-3" href="/coaching/">LEARN MORE</a>
             </div>
