--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -66,7 +66,7 @@
                 <blockquote>
                     <p class="text-6 text-tertiary line-height-9 mb-0 mt-4">We are all on a unique and different journey.</p>
                 </blockquote>
-                <a class="btn btn-outline btn-tertiary font-weight-bold mb-3" href="/coaching/">LEARN MORE</a>
+                <a class="btn btn-outline btn-tertiary font-weight-bold mb-3" href="/coaching/">Start Your Journey</a>
             </div>
         </div>
     </div>
