--- a/landing/templates/components/testimonials.html
+++ b/landing/templates/components/testimonials.html
@@ -68,10 +68,10 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title " id="testimonialAuthor">Author</h4>
+                <h4 class="modal-title" id="testimonialAuthor">Author</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body text-center">
                 <p id="testimonial">Testimonial</p>
             </div>
             <div class="modal-footer">
