--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -29,7 +29,7 @@
 .bounce-loader .bounce1,
 .bounce-loader .bounce2,
 .bounce-loader .bounce3 {
-	background-color: #571D31;
+	background-color: #c99825;
 	border: 1px solid rgba(0, 0, 0, 0.327);
 }
 
